# OpenSC-GUI

./: CMakeLists.txt  README.md  buergerkarte.qrc  buergerkarte.rc
buergerkarte/: .directory
buergerkarte/installer/: buergerkarte.aip
buergerkarte/lib/opensc/include/: config.h
buergerkarte/src/: CMakeLists.txt  error.cpp  logger.cpp  logger.h  main.cpp  mainwidget.cpp  pukdialog.cpp  x509certificatehandler.cpp  x509certificatehandler.h
buergerkarte/src/forms/: mainwidget.ui
icons/: .directory
installer/: OpenSC_PKCS11_Module_V1.2.xpi  VERSION  buergerkarte.aip
installer/buergerkarte-cache/part1/: output-info.ini
installer/deb/: buergerkarte.desktop  control_template  createDeb.sh
installer/osx/: buildpkg.sh  createPkg.sh
installer/win32/: OpenSC_Reg32.reg  OpenSC_Reg64.reg  buergerkarte.aip  buergerkarte.iss  firefox_pkcs11_module.xpi  install.bat  install_firefox_xpi.vbs  opensc-0.13.0-win32.msi  opensc-0.14.0-win32.msi  opensc-2014-11-07_12-53-10-win32.msi  opensc-2014-12-03_14-51-11-win32.msi  opensc-2014-12-03_14-52-41-win64.msi  opensc32.reg  opensc64.reg
lib/opensc/include/libopensc/: cardctl.h  libopensc.pc  pkcs15.h
lib/opensc/lib/mac_osx/: libopensc.3.dylib  libopensc.dylib
src/: CMakeLists.txt  aboutdialog.cpp  aboutdialog.h  cardcontrolhandler.cpp  cardcontrolhandler.h  error.cpp  error.h  logger.cpp  logger.h  main.cpp  mainwidget.cpp  mainwidget.h  pukdialog.cpp  pukdialog.h  statusbar.cpp  statusbar.h  version.h  x509certificatehandler.cpp  x509certificatehandler.h
src/forms/: aboutdialog.ui  mainwidget.ui  pukdialog.ui
translations/: buergerkarte.ts  buergerkarte_de.ts  buergerkarte_it.ts
